# tally

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
tally/: cli.py
tests/: conftest.py  test_cli.py
