[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tally"
version = "0.1.0"
description = "A tiny CLI for counting things."
requires-python = ">=3.11"
dependencies = ["click>=8.0"]

[project.scripts]
tally = "tally.cli:cli"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
